--- a/2/LendingTree/LTWeb/Views/Questions/FormFields.cshtml
+++ b/2/LendingTree/LTWeb/Views/Questions/FormFields.cshtml
@@ -1,22 +1,54 @@
 ﻿@model LTWeb.Models.QuestionVM
 
-@if (Model.Key == "LoanType" || Model.Key == "PropertyState" || Model.Key == "CreditRating"
-    || Model.Key == "PropertyType" || Model.Key == "PropertyUse" || Model.Key == "PropertyZip"
-    || Model.Key == "PropertyApproximateValue" || Model.Key == "EstimatedMortgageBalance")
+@if (Model.Key == "LoanType")
 {
             <div id="lenny-first"></div>
+    <div id="progressbar" style="display:none"></div>
+    
+    
 }
-else if (Model.Key == "CashOut" || Model.Key == "MonthlyPayment" || Model.Key == "BankruptcyDischarged"
-|| Model.Key == "ForeclosureDischarged" || Model.Key == "IsVetran" || Model.Key == "FirstName"
-|| Model.Key == "Address" || Model.Key == "Email" || Model.Key == "HomePhone" )
-     {
-            <div id="lenny-middle"></div>
-     }
+else if (Model.Key == "PropertyState")
+{
+            <div id="lenny-second"></div>
+    <div id="progressbar-label">Progress:&nbsp;</div>
+    
+}
+
+
+else if (Model.Key == "CreditRating"
+|| Model.Key == "PropertyType" || Model.Key == "PropertyUse" || Model.Key == "PropertyZip")
+{
+            <div id="lenny-six"></div>
+    <div id="progressbar-label">Progress:&nbsp;</div>
+}
+
+
+else if (Model.Key == "PropertyApproximateValue" || Model.Key == "EstimatedMortgageBalance" || Model.Key == "CashOut")
+{
+            <div id="lenny-three"></div>
+    <div id="progressbar-label">Progress:&nbsp;</div>
+}
+
+
+else if (Model.Key == "MonthlyPayment" || Model.Key == "BankruptcyDischarged" || Model.Key == "ForeclosureDischarged" || Model.Key == "IsVetran")
+{
+            <div id="lenny-seven"></div>
+    <div id="progressbar-label">Progress:&nbsp;</div>
+}
+
+
+else if (Model.Key == "FirstName" || Model.Key == "Address" || Model.Key == "Email" || Model.Key == "HomePhone")
+{
+            <div id="lenny-four"></div>
+    <div id="progressbar-label">Progress:&nbsp;</div>
+}
+
 
 else if (Model.Key == "SSN")
-     {
-            <div id="lenny-last"></div>
-     }
+{
+            <div id="lenny-five-option2"></div>
+    <div id="progressbar-label">Progress:&nbsp;</div>
+}
 
 
 
@@ -29,15 +61,20 @@ else if (Model.Key == "SSN")
 
         @if (LTWeb.Session.LTModel.SsnRequired)
         {
-            <h3 class="ssnOptional">&nbsp;</h3>
+            <!--<h3 class="ssnOptional">&nbsp;</h3>--><br /><br />
         }
         else
         {
-            <h3 class="ssnOptional" style="margin-top: 0px;">No SSN Required</h3>
+            <!--<h3 class="ssnOptional" style="margin-top: 0px;">No SSN Required</h3>--><br /><br />
         }
-        <div id="progressbarcontainer" style="margin-left: 30px; margin-top: 25px">
-            <div style="float:left; color:black">Progress:&nbsp;</div>
-            <div id="progressbar" style="width:270px; height:18px"></div>
+        
+        <div id="progressbarcontainer">
+            
+            
+           
+
+           <div id="progressbar" style="width:270px; height:12px; margin-top:3px;"></div>
+             
         </div>
     </div>
     <div class="form-content png">
@@ -77,12 +114,21 @@ else if (Model.Key == "SSN")
                             if (Model.Key != "Complete")
                             {
                         <div>
-                            <div style="float: left; width: 400px; margin-right: 100px">
+                            <div style="float: left; width: 400px; margin-left: 20px">
                                 @*-------------*@
                                 @*     LOCK    *@
                                 @*-------------*@
                                 <div style="float: left; width: @(Model.IsFirstQuestion ? "30px" : "80px"); display: inline; margin-top: 20px;">
-                                    <div class="@(Model.IsFirstQuestion ? "security" : "security2")"></div>
+                                    
+                                    @if (Model.Key == "SSN")
+                                        {
+                                    
+                                        <div class="security3"></div>
+                                    
+                                    }else{
+                                      
+                                        <div class="@(Model.IsFirstQuestion ? "security" : "security2")"></div>
+                                    }
                                 </div>
                                 @*-------------*@
                                 @*SUBMIT BUTTON*@
