admin- create userprofile

--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/Home/Index.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/Home/Index.cshtml
@@ -113,6 +113,12 @@
     <link href="~/Content/kendo/2013.1.514/kendo.common.min.css" rel="stylesheet" />
     <link href="~/Content/kendo/2013.1.514/kendo.bootstrap.min.css" rel="stylesheet" />
     <link href="~/Content/index.css" rel="stylesheet" />
+    <style>
+        th a {
+            color: #000;
+            text-decoration: underline
+        }
+    </style>
 }
 
 @section scripts {
