--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/Advertisers/Index.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/Advertisers/Index.cshtml
@@ -10,18 +10,20 @@
 }
 
 <p>
-    @Ajax.ActionLink("Create New Advertiser", "Create", ajaxOptions)
+    @Ajax.ActionLink("Create New Advertiser", "Create", ajaxOptions) |
+    @Ajax.ActionLink("Refresh", "Index", ajaxOptions)
 </p>
 <table>
     <tr>
-        <th>Id</th>
-        <th>Name</th>
-        <th>Logo?</th>
+        <th>@Ajax.ActionLink("Id", "Index", new { sort="AdvertiserId" }, ajaxOptions)</th>
+        <th>@Ajax.ActionLink("Name", "Index", new { sort="AdvertiserName" }, ajaxOptions)</th>
         <th>Culture</th>
         <th>ShowCPM?</th>
         <th>ConVal</th>
         <th>Show?</th>
         <th>IsNum?</th>
+        <th>Profile?</th>
+        <th>Logo?</th>
         <th></th>
     </tr>
 
@@ -32,9 +34,6 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.AdvertiserName)
-        </td>
-        <td>
-            @(item.Logo == null ? "no" : "yes")
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Culture)
@@ -52,9 +51,18 @@
             @Html.DisplayFor(modelItem => item.ConversionValueIsNumber)
         </td>
         <td>
+            @if (item.UserProfiles.Count() > 0) {
+                <text>yes</text>
+            } else {
+                @Ajax.ActionLink("no", "CreateUserProfile", new { id=item.AdvertiserId }, ajaxOptions)
+            }
+        </td>
+        <td>
+            @Ajax.ActionLink((item.Logo == null ? "no" : "yes"), "EditLogo", new { id=item.AdvertiserId }, ajaxOptions)
+        </td>
+        <td>
             @Ajax.ActionLink("Edit", "Edit", new { id=item.AdvertiserId }, ajaxOptions) |
             @Ajax.ActionLink("Edit Contacts", "EditContacts", new { id=item.AdvertiserId }, ajaxOptions) |
-            @Ajax.ActionLink("Logo", "EditLogo", new { id=item.AdvertiserId }, ajaxOptions) |
             @Ajax.ActionLink("Details", "Details", new { id=item.AdvertiserId }, ajaxOptions) |
             @Ajax.ActionLink("Delete", "Delete", new { id=item.AdvertiserId }, ajaxOptions)
         </td>
