--- a/3/ClientPortal.Web/ClientPortal.Web/Views/SearchHome/ChannelPerf.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/SearchHome/ChannelPerf.cshtml
@@ -1,4 +1,12 @@
-﻿<div id="channelperfGrid"></div>
+﻿<div class="row">
+    <div class="twelve columns">
+        <div class="searchpanel" id="channelperfOuter">
+            <b>Channel Performance</b>
+            <a class="button paddedbutton" style="float: right" href="#" onclick="ExportChannelPerfCSV(); return false">Export CSV</a>
+            <div id="channelperfGrid" style="margin-top: 10px"></div>
+        </div>
+    </div>
+</div>
 
 <script>
     $(function () {
@@ -8,4 +16,8 @@
         });
         channelperfDS.read();
     });
+
+    function ExportChannelPerfCSV() {
+        window.location.href = '@Url.Action("ChannelPerfExport", "SearchReports")';
+    }
 </script>
