--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/Advertisers/CreateUserProfile.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/Advertisers/CreateUserProfile.cshtml
@@ -24,14 +24,33 @@
             <label>UserName</label>
         </div>
         <div class="editor-field">
-            <input class="text-box single-line" id="UserName" name="UserName" type="text" value="">
+            <input class="text-box single-line" id="UserName" name="UserName" type="text" value="" />
         </div>
 
         <div class="editor-label">
             <label>Password</label>
         </div>
         <div class="editor-field">
-            <input class="text-box single-line" id="Password" name="Password" type="text" value="">
+            <input class="text-box single-line" id="Password" name="Password" type="text" value="" />
+        </div>
+        <div>
+            <input style="float: right" type="button" value="Generate Password" onclick="GeneratePassword()" />
+            <br style="clear: both" />
+        </div>
+
+        <div class="editor-label">
+            <label>Send Email?</label>
+        </div>
+        <div class="editor-field">
+            @Html.CheckBox("SendEmail")
+        </div>
+        <div id="divEmail" style="display:none">
+            <div class="editor-label">
+                <label>Email Address</label>
+            </div>
+            <div class="editor-field">
+                <input class="text-box single-line" id="Email" name="Email" type="text" value="" />
+            </div>
         </div>
 
         <p>
@@ -45,6 +64,25 @@
         UpdateTargetId = "advertisersTab", HttpMethod = "Get"
     })
 </div>
+
+<script>
+    $(function() {
+        $('#SendEmail').click(function () {
+            $('#divEmail').toggle();
+        });
+    });
+
+    function GeneratePassword() {
+        var chars = "0123456789ABCDEFGHIJKLMNOPQRSTUVWXTZabcdefghiklmnopqrstuvwxyz";
+        var string_length = 8;
+        var randomstring = '';
+        for (var i = 0; i < string_length; i++) {
+            var rnum = Math.floor(Math.random() * chars.length);
+            randomstring += chars.substring(rnum, rnum + 1);
+        }
+        $('#Password').val(randomstring);
+    }
+</script>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
