--- a/3/ClientPortal.Web/ClientPortal.Web/Views/SearchHome/CampaignPerf.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/SearchHome/CampaignPerf.cshtml
@@ -15,6 +15,7 @@
     <span class="paddedlabel">End:</span>
     <input id="campaignperf_enddate" name="enddate" type="text" value="@Model.EndDate" onchange="DateChanged('campaignperf')" />
     <a class="button paddedbutton" id="campaignperf_filterBtn" href="#" onclick="if($(this).attr('disabled') != 'disabled') RefreshGrid('campaignperf'); return false">Filter</a>
+    &nbsp;Show Breakdown<input type="checkbox" id="campaignperf_showBreakdown" style="vertical-align: middle" />
     <a class="button paddedbutton" style="float: right" href="#" onclick="ExportCampaignPerfCSV(); return false">Export CSV</a>
 </div>
 <div id="campaignperfGrid"></div>
@@ -25,23 +26,35 @@
         $('#campaignperf_startdate').kendoDatePicker({ footer: ' ' });
         $('#campaignperf_enddate').kendoDatePicker({ footer: ' ' });
 
+        InitGrid();
+
+        $('#campaignperf_showBreakdown').click(function () {
+            InitGrid();
+        });
+    });
+
+    function InitGrid() {
+        $('#campaignperfGrid').html('');
+
+        var showBreakdown = $('#campaignperf_showBreakdown').is(':checked');
         var campaignperfDS = CreateSummaryDataSource(
             '@Url.Action("CampaignPerfData", "SearchReports")',
             function () {
                 return {
                     startdate: $('#campaignperf_startdate').val(),
-                    enddate: $('#campaignperf_enddate').val()
+                    enddate: $('#campaignperf_enddate').val(),
+                    breakdown: showBreakdown
                 };
             },
             false);
-        CreateSummaryGrid(campaignperfDS, $('#campaignperfGrid'), 550, 'Campaign', 20, 2, true, true, null);
-
+        CreateSummaryGrid(campaignperfDS, $('#campaignperfGrid'), 550, 'Campaign', 20, 2, true, true, showBreakdown, null);
         campaignperfDS.read();
-    });
+    }
 
     function ExportCampaignPerfCSV() {
         var s = $('#campaignperf_startdate').val();
         var e = $('#campaignperf_enddate').val();
-        window.location.href = '@Url.Action("CampaignPerfExport", "SearchReports")?startdate=' + s + '&enddate=' + e;
+        var showBreakdown = $('#campaignperf_showBreakdown').is(':checked');
+        window.location.href = '@Url.Action("CampaignPerfExport", "SearchReports")?startdate=' + s + '&enddate=' + e + '&breakdown=' + showBreakdown;
     }
 </script>
